--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           </div>
         </div>
         <p class="text-muted mt-3 small">
-          Downloading AI model (~80MB). This may take a moment on first load.
+          Downloading multilingual AI model (~150MB). This may take a moment on first load.
         </p>
       </div>
     </div>
@@ -258,8 +258,17 @@
       <div class="d-grid gap-3 mb-4">
         <button id="record-btn" class="btn btn-lg btn-danger" disabled>
           <span id="record-icon">🎤</span>
-          <span id="record-text">Record Your Voice</span>
+          <span id="record-text">Hold to Record</span>
         </button>
+
+        <!-- Processing Progress Bar -->
+        <div id="processing-progress" class="progress" style="display: none; height: 30px;">
+          <div id="processing-progress-bar" class="progress-bar progress-bar-striped progress-bar-animated"
+               role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+            Processing...
+          </div>
+        </div>
+
         <button id="next-word-btn" class="btn btn-lg btn-outline-primary">
           Next Word →
         </button>
@@ -308,7 +317,7 @@
 
       <!-- Tips -->
       <div class="alert alert-info mt-4" role="alert">
-        <strong>Tips:</strong> Speak clearly in a quiet environment. Click "Record" to start, click again to stop.
+        <strong>Tips:</strong> Hold down the button while speaking (max 4 seconds). Release to stop and process your pronunciation.
       </div>
     </div>
 
