--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎉</text></svg>">
 
   <!-- Console interceptor to show all console output in UI -->
-  <script>
+  <script type="module">
+    import { onLanguageChange, t } from '/src/i18n.js';
+
     (function () {
       const originalLog = console.log;
       const originalError = console.error;
@@ -160,19 +162,25 @@
               await navigator.clipboard.writeText(text);
               // Visual feedback
               const originalText = copyBtn.textContent;
-              copyBtn.textContent = '✓ Copied!';
+              copyBtn.textContent = t('console.copy_success');
               setTimeout(() => {
                 copyBtn.textContent = originalText;
               }, 2000);
             } catch (err) {
               console.error('Failed to copy:', err);
-              copyBtn.textContent = '✗ Failed';
+              copyBtn.textContent = t('console.copy_failed');
               setTimeout(() => {
-                copyBtn.textContent = '📋 Copy';
+                copyBtn.textContent = t('console.copy');
               }, 2000);
             }
           });
         }
+
+        onLanguageChange(() => {
+          if (copyBtn) {
+            copyBtn.textContent = t('console.copy');
+          }
+        });
       });
     })();
   </script>
@@ -200,12 +208,14 @@
     <!-- Console Output -->
     <div class="card mb-4 bg-dark text-light">
       <div class="card-header d-flex justify-content-between align-items-center">
-        <strong>Console Output</strong>
+        <strong data-i18n="console.title">Console Output</strong>
         <div class="btn-group btn-group-sm">
-          <button id="copy-console" class="btn btn-outline-light" title="Copy to clipboard">
-            📋 Copy
+          <button id="copy-console" class="btn btn-outline-light" data-i18n="console.copy"
+            data-i18n-attr="title:console.copy_title">
+            Copy
           </button>
-          <button id="clear-console" class="btn btn-outline-light" title="Clear console">
+          <button id="clear-console" class="btn btn-outline-light" data-i18n="console.clear"
+            data-i18n-attr="title:console.clear_title">
             Clear
           </button>
         </div>
@@ -218,8 +228,15 @@
 
     <!-- Header -->
     <header class="text-center mb-5">
-      <h1 class="display-4 fw-bold">🎉 Phoneme Party</h1>
-      <p class="lead text-muted">Practice German pronunciation with AI</p>
+      <h1 class="display-4 fw-bold" data-i18n="header.title">Phoneme Party</h1>
+      <p class="lead text-muted" data-i18n="header.subtitle">Practice German pronunciation with AI</p>
+      <div class="d-flex justify-content-center align-items-center gap-2 mt-3">
+        <label for="language-select" class="form-label mb-0" data-i18n="language.label">Language:</label>
+        <select id="language-select" class="form-select form-select-sm w-auto">
+          <option value="de" data-i18n="language.de">German</option>
+          <option value="en" data-i18n="language.en">English</option>
+        </select>
+      </div>
     </header>
 
     <!-- Loading Overlay -->
@@ -227,17 +244,17 @@
       <div class="card-body text-center py-5">
         <div class="mb-3">
           <div class="spinner-border text-primary" role="status">
-            <span class="visually-hidden">Loading...</span>
+            <span class="visually-hidden" data-i18n="loading.hidden_label">Loading...</span>
           </div>
         </div>
-        <h5 id="loading-status" class="mb-3">Initializing...</h5>
+        <h5 id="loading-status" class="mb-3" data-i18n="loading.initializing">Initializing...</h5>
         <div class="progress" style="height: 25px;">
           <div id="loading-progress" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
             style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
             0%
           </div>
         </div>
-        <p class="text-muted mt-3 small">
+        <p class="text-muted mt-3 small" data-i18n="loading.description">
           Downloading multilingual AI model (~150MB). This may take a moment on first load.
         </p>
       </div>
@@ -258,19 +275,19 @@
       <div class="d-grid gap-3 mb-4">
         <button id="record-btn" class="btn btn-lg btn-danger" disabled>
           <span id="record-icon">🎤</span>
-          <span id="record-text">Hold to Record</span>
+          <span id="record-text" data-i18n="record.hold">Hold to Record</span>
         </button>
 
         <!-- Processing Progress Bar -->
         <div id="processing-progress" class="progress" style="display: none; height: 30px;">
           <div id="processing-progress-bar" class="progress-bar progress-bar-striped progress-bar-animated"
                role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-            Processing...
+            <span data-i18n="processing.label">Processing...</span>
           </div>
         </div>
 
         <button id="next-word-btn" class="btn btn-lg btn-outline-primary">
-          Next Word →
+          <span data-i18n="buttons.next_word">Next Word →</span>
         </button>
       </div>
 
@@ -278,7 +295,7 @@
       <div id="feedback-section" style="display: none;">
         <div class="card shadow-sm">
           <div class="card-header">
-            <h5 class="mb-0">Your Pronunciation</h5>
+            <h5 class="mb-0" data-i18n="feedback.title">Your Pronunciation</h5>
           </div>
           <div class="card-body">
             <div id="feedback-alert" class="alert mb-3" role="alert">
@@ -287,22 +304,22 @@
 
             <div class="row text-center mb-3">
               <div class="col-md-6 mb-3">
-                <strong>Target Word:</strong>
+                <strong data-i18n="feedback.target_word_label">Target Word:</strong>
                 <p id="feedback-target" class="mb-0"></p>
               </div>
               <div class="col-md-6 mb-3">
-                <strong>You Said:</strong>
+                <strong data-i18n="feedback.you_said_label">You Said:</strong>
                 <p id="feedback-transcription" class="mb-0"></p>
               </div>
             </div>
 
             <div class="row text-center">
               <div class="col-md-6 mb-3">
-                <strong>Target IPA:</strong>
+                <strong data-i18n="feedback.target_ipa_label">Target IPA:</strong>
                 <p id="feedback-target-ipa" class="text-muted mb-0"></p>
               </div>
               <div class="col-md-6 mb-3">
-                <strong>Your IPA:</strong>
+                <strong data-i18n="feedback.your_ipa_label">Your IPA:</strong>
                 <p id="feedback-actual-ipa" class="text-muted mb-0"></p>
               </div>
             </div>
@@ -317,15 +334,17 @@
 
       <!-- Tips -->
       <div class="alert alert-info mt-4" role="alert">
-        <strong>Tips:</strong> Hold down the button while speaking (max 4 seconds). Release to stop and process your pronunciation.
+        <strong data-i18n="tips.label">Tips:</strong>
+        <span data-i18n="tips.body">Hold down the button while speaking (max 4 seconds). Release to stop and process your pronunciation.</span>
       </div>
     </div>
 
     <!-- Footer -->
     <footer class="text-center mt-5 text-muted">
       <small>
-        Powered by <a href="https://github.com/huggingface/transformers.js" target="_blank">Transformers.js</a>
-        | All processing happens locally in your browser
+        <span data-i18n="footer.powered_by">Powered by</span>
+        <a href="https://github.com/huggingface/transformers.js" target="_blank">Transformers.js</a>
+        | <span data-i18n="footer.local_processing">All processing happens locally in your browser</span>
       </small>
     </footer>
   </div>
