--- a/index.html
+++ b/index.html
@@ -250,13 +250,18 @@
       </div>
 
       <!-- Controls -->
-      <div class="d-grid gap-3 mb-4">
-        <button id="record-btn" class="btn btn-lg btn-danger" disabled>
+      <div class="d-flex gap-3 mb-3">
+        <button id="record-btn" class="btn btn-lg btn-danger flex-grow-1" disabled>
           <span id="record-icon">🎤</span>
           <span id="record-text" data-i18n="record.hold">Hold to Record</span>
         </button>
+        <button id="next-word-btn" class="btn btn-lg btn-outline-primary flex-grow-1">
+          <span data-i18n="buttons.next_word">Next Word →</span>
+        </button>
+      </div>
 
-        <!-- Processing Progress Bar -->
+      <!-- Processing Progress Bar -->
+      <div class="mb-4">
         <div id="processing-progress" class="progress" style="display: none; height: 30px;">
           <div id="processing-progress-bar" class="progress-bar progress-bar-striped progress-bar-animated"
                role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
@@ -264,10 +269,6 @@
           </div>
         </div>
         <div id="processing-debug" class="processing-debug mt-2" style="display: none;"></div>
-
-        <button id="next-word-btn" class="btn btn-lg btn-outline-primary">
-          <span data-i18n="buttons.next_word">Next Word →</span>
-        </button>
       </div>
 
       <!-- Feedback Section (hidden initially) -->
@@ -281,15 +282,9 @@
               <!-- Dynamic content will be inserted here -->
             </div>
 
-            <div class="row text-center mb-3">
-              <div class="col-md-6 mb-3">
-                <strong data-i18n="feedback.target_word_label">Target Word:</strong>
-                <p id="feedback-target" class="mb-0"></p>
-              </div>
-              <div class="col-md-6 mb-3">
-                <strong data-i18n="feedback.you_said_label">You Said:</strong>
-                <p id="feedback-transcription" class="mb-0"></p>
-              </div>
+            <div class="text-center mb-3">
+              <strong data-i18n="feedback.target_word_label">Target Word:</strong>
+              <p id="feedback-target" class="mb-0"></p>
             </div>
 
             <div class="row text-center">
