--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Phoneme Party - Pronunciation Practice</title>
   <link rel="icon"
     href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎉</text></svg>">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
   <!-- Console interceptor to show all console output in UI -->
   <script type="module">
@@ -294,7 +295,10 @@
               </div>
               <div class="col-md-6 mb-3">
                 <strong data-i18n="feedback.your_ipa_label">Your IPA:</strong>
-                <p id="feedback-actual-ipa" class="text-muted mb-0"></p>
+                <p id="feedback-actual-ipa" class="text-muted mb-0 d-inline"></p>
+                <button id="play-recording-btn" class="btn btn-sm btn-outline-secondary ms-2" title="Play your recording" style="display: none;">
+                  <i class="bi bi-play-fill"></i>
+                </button>
               </div>
             </div>
 
