--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
         <a href="https://github.com/huggingface/transformers.js" target="_blank">Transformers.js</a>
         | <span data-i18n="footer.local_processing">All processing happens locally in your browser</span>
         | <span id="webgpu-status" data-i18n="footer.webgpu_status_checking">WebGPU: checking...</span>
+        | <a href="attribution.html" data-i18n="footer.attribution">Attribution</a>
       </small>
     </footer>
   </div>
