"word" to "phrase"

--- a/attribution.html
+++ b/attribution.html
@@ -85,7 +85,7 @@
 
       <div class="attribution-item">
         <h3>Twemoji</h3>
-        <p>Emoji graphics used in the word display are provided by Twitter's Twemoji project.</p>
+        <p>Emoji graphics are provided by Twitter's Twemoji project.</p>
         <p>
           <a href="https://github.com/twitter/twemoji" target="_blank">https://github.com/twitter/twemoji</a>
         </p>
