--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@
 
     <!-- Main Content (hidden until loaded) -->
     <div id="main-content" style="display: none;">
-      <!-- Word Display Card -->
+      <!-- Phrase Display Card -->
       <div class="card shadow-lg mb-4">
         <div class="card-body text-center py-5">
-          <div id="word-emoji" class="emoji-display mb-3">🐱</div>
-          <h2 id="word-text" class="display-5 fw-bold mb-2">Katze</h2>
-          <p id="word-ipa" class="text-muted fs-5 mb-0">/ˈkat͡sə/</p>
+          <div id="phrase-emoji" class="emoji-display mb-3">🐱</div>
+          <h2 id="phrase-text" class="display-5 fw-bold mb-2">Katze</h2>
+          <p id="phrase-ipaa" class="text-muted fs-5 mb-0">/ˈkat͡sə/</p>
         </div>
       </div>
 
@@ -256,8 +256,8 @@
           <span id="record-icon">🎤</span>
           <span id="record-text" data-i18n="record.hold">Hold to Record</span>
         </button>
-        <button id="next-word-btn" class="btn btn-lg btn-outline-primary flex-grow-1">
-          <span data-i18n="buttons.next_word">Next Word →</span>
+        <button id="next-phrase-btn" class="btn btn-lg btn-outline-primary flex-grow-1">
+          <span data-i18n="buttons.next_phrase">Next Phrase →</span>
         </button>
       </div>
 
@@ -265,7 +265,7 @@
       <div class="mb-4">
         <div id="processing-progress" class="progress" style="display: none; height: 30px;">
           <div id="processing-progress-bar" class="progress-bar progress-bar-striped progress-bar-animated"
-               role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+            role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
             <span data-i18n="processing.label">Processing...</span>
           </div>
         </div>
@@ -283,7 +283,7 @@
             </div>
 
             <div class="text-center mb-3">
-              <strong data-i18n="feedback.target_word_label">Target Word:</strong>
+              <strong data-i18n="feedback.target_phrase_label">Target Phrase:</strong>
               <p id="feedback-target" class="mb-0"></p>
             </div>
 
@@ -292,14 +292,17 @@
               <div class="d-flex justify-content-center align-items-start gap-2 flex-wrap">
                 <div class="d-flex align-items-center">
                   <strong class="me-2" data-i18n="feedback.target_ipa_label">Target IPA:</strong>
-                  <button id="play-target-btn" class="btn btn-sm btn-outline-secondary" data-i18n-attr="title:feedback.play_target" title="Play desired pronunciation" style="display: none;">
+                  <button id="play-target-btn" class="btn btn-sm btn-outline-secondary"
+                    data-i18n-attr="title:feedback.play_target" title="Play desired pronunciation"
+                    style="display: none;">
                     <i class="bi bi-volume-up-fill"></i>
                   </button>
                   <small id="speech-synthesis-hint" class="text-muted ms-2" style="display: none;"></small>
                 </div>
                 <div class="d-flex align-items-center">
                   <strong class="me-2" data-i18n="feedback.your_ipa_label">Your IPA:</strong>
-                  <button id="play-recording-btn" class="btn btn-sm btn-outline-secondary" title="Play your recording" style="display: none;">
+                  <button id="play-recording-btn" class="btn btn-sm btn-outline-secondary" title="Play your recording"
+                    style="display: none;">
                     <i class="bi bi-play-fill"></i>
                   </button>
                 </div>
@@ -337,7 +340,8 @@
       <!-- Tips -->
       <div id="tips-section" class="alert alert-info mt-4" role="alert">
         <strong data-i18n="tips.label">Tips:</strong>
-        <span data-i18n="tips.body">Hold down the button while speaking (max 4 seconds). Release to stop and process your pronunciation.</span>
+        <span data-i18n="tips.body">Hold down the button while speaking (max 4 seconds). Release to stop and process
+          your pronunciation.</span>
       </div>
 
       <!-- Processing Debug (shown after processing) -->
