voice selection (but not working yet)

--- a/index.html
+++ b/index.html
@@ -532,6 +532,23 @@
       </footer>
     </div>
 
+    <!-- Voice Selection Modal -->
+    <div class="modal fade" id="voice-selection-modal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-scrollable">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Select Voice</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+          </div>
+          <div class="modal-body">
+            <div id="voice-list" class="list-group">
+              <!-- Voices will be populated dynamically -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
