better stream detection.

--- a/index.html
+++ b/index.html
@@ -418,6 +418,14 @@
                     >
                       <i class="bi bi-play-fill"></i>
                     </button>
+                    <button
+                      id="reprocess-recording-btn"
+                      class="btn btn-sm btn-outline-primary ms-2"
+                      title="Re-run IPA detection"
+                      style="display: none"
+                    >
+                      <i class="bi bi-arrow-clockwise"></i>
+                    </button>
                   </div>
                 </div>
                 <div
