--- a/index.html
+++ b/index.html
@@ -459,6 +459,31 @@
                 </div>
               </div>
 
+              <!-- Model Details Visualization Button -->
+              <div class="mt-3 text-center">
+                <button
+                  id="show-model-details-btn"
+                  class="btn btn-sm btn-outline-info"
+                  style="display: none"
+                >
+                  <i class="bi bi-graph-up me-1"></i>
+                  Show Model Details
+                </button>
+              </div>
+
+              <!-- Model Details Display (collapsible) -->
+              <div id="model-details" class="mt-3" style="display: none">
+                <div class="card card-body bg-light">
+                  <h6 class="fw-bold mb-3">
+                    <i class="bi bi-cpu me-1"></i>
+                    Model Output Visualization
+                  </h6>
+                  <div id="model-details-content">
+                    <!-- Dynamic content will be inserted here -->
+                  </div>
+                </div>
+              </div>
+
               <div class="text-center mt-4">
                 <h4 id="feedback-score" class="mb-3"></h4>
                 <p id="feedback-message" class="lead"></p>
