remove "whisper". No longer used.

--- a/index.html
+++ b/index.html
@@ -580,8 +580,8 @@
       <footer class="text-center mt-5 text-muted">
         <small>
           <span data-i18n="footer.powered_by">Powered by</span>
-          <a href="https://github.com/huggingface/transformers.js" target="_blank"
-            >Transformers.js</a
+          <a href="https://huggingface.co/guettli/zipa-small-ctc-onnx-2026-01-28" target="_blank"
+            >ZIPA</a
           >
           |
           <span data-i18n="footer.local_processing"
