partial download (for mobile) and resume download of model.

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             </div>
           </div>
           <p class="text-muted mt-3 small" data-i18n="loading.description">
-            Downloading multilingual AI model (~150MB). This may take a moment on first load.
+            Downloading multilingual AI model. This may take a moment on first load.
           </p>
         </div>
       </div>
